--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,10 @@
   "background": {
     "service_worker": "background.js"
   },
+  "host_permissions": [
+  "https://www.youtube.com/*"
+    ]
+  ,
   "content_scripts": [
     {
       "matches": ["https://www.youtube.com/*"],
